finish up api implementation
