# api-spec.yaml
@@ -36,7 +36,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ListOfStrings"
-  /entity/{name}/{id}: # partial
+  /entity/{name}/{id}: # done
     parameters:
       - in: path
         name: id
@@ -56,7 +56,7 @@ paths:
                   state:
                     type: object
                     additionalProperties: true
-  /entity/{name}/{id}/{method}: # partial
+  /entity/{name}/{id}/{method}: # done
     parameters:
       - in: path
         name: id
@@ -116,7 +116,7 @@ paths:
               description: The id of the newly created orchestration
               schema:
                 type: string
-  /orchestration/{id}:
+  /orchestration/{name}/{id}: #done
     get:
       summary: Get the current status of an orchestration
       responses:
@@ -125,7 +125,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Status"
-  /orchestration/{id}/{signal}:
+  /orchestration/{name}/{id}/{signal}: #done
     parameters:
       - in: path
         name: id
